package com.learning.patterns.factory;

public interface EmiCalculator {
    double calculateEmi(double principal, double rate, int tenure);
}