package com.learning.patterns.factory;

public interface LoanDocument {
    String getDocument();
}