package com.learning.patterns.factory;

public enum LoanType { PERSONAL, CAR, HOME }